2005-01-27  Paolo Borelli  <pborelli@katamail.com>

	* gedit-mdi.c: plug small memory leak.

2005-01-27  Paolo Borelli  <pborelli@katamail.com>

	* gedit-menus.c: escape slashes from bonobo menus to fix potential
	crash
	* gedit-mdi.c: use g_string_sized_new for the escaping functions.

2005-01-25  Paolo Maggi  <paolo@gnome.org>

	* gedit-convert.[ch] (gedit_convert_from_utf8): returns the size of
	the converted text (as number of bytes)

	* gedit-document.c (gedit_document_save_as_real): fixes 
	bug #156423 (Saving in UTF-16 encoding destroys files)

2005-01-25  Paolo Maggi  <paolo@gnome.org>

	Fixed bug #115070 (RFE: usability: <esc> shoud close Search dialog)

	Since nothing seems to change on the HIG side, I have decided 
	that gedit will 'take the lead' on this problem and so, 
	I have enabled ESC to close the search/replace dialog and the 
	"go to line" one.

	* gedit/dialogs/gedit-dialog-goto-line.c
	(dialog_goto_line_get_dialog): close the dialog when the ESC button
	is pressed

	* gedit/dialogs/gedit-dialog-replace.c (dialog_replace_get_dialog)
	(dialog_find_get_dialog): ditto

2005-01-23  Paolo Borelli  <pborelli@katamail.com>

	* recent-files/egg-recent-item.c (egg_recent_item_get_short_name):
	fix segfault.

2005-01-19  Paolo Borelli  <pborelli@katamail.com>

	* gedit-io-error-dialogs.c: fix typos in error messages.

2005-01-14  Paolo Maggi  <paolo@gnome.org>

	* gedit-view.c: also change the cursor color when changing the text 
	color. (#119922)

2005-01-12  Paolo Maggi  <paolo@gnome.org>

	* gedit-mdi-child.c (set_tooltip): use g_markup_printf_escaped instead
	of g_strdup_printf

2005-01-12  Paolo Maggi  <paolo@gnome.org>

	Fixed bug #161612 (Use of "Home" key when text editing)

	* gedit-view.c (move_cursor) (gedit_view_move_cursor): new functions
	(gedit_view_init): connect the move-cursor signal to 
	gedit_view_move_cursor

==== gedit 2.9.4 ====

2005-01-11  Paolo Maggi  <paolo@gnome.org>

	* recent-files/egg-recent-model.c (end_element_handler)